all banners horizontal scroll issue

--- a/src/pages/admin/all-banners/all-banners.module.scss
+++ b/src/pages/admin/all-banners/all-banners.module.scss
@@ -2,11 +2,14 @@
   .banner-cards-container {
     display: flex;
     flex-direction: column;
-    // width: fit-content;
     gap: 20px;
+    padding: 10px;
+    // * {
+    //   outline: 2px solid royalblue;
+    // }
     .banner-card {
-      margin: 0 20px;
-      padding: 20px;
+      // margin: 0 20px;
+      // padding: 20px;
       background: #fff;
       border-radius: 8px;
       border: 2px solid #e6e8ea;
